# base-notebook

./: .gitignore  .pre-commit-config.yaml  .templaterc  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  _quarto.yml  index.qmd  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
jupyter/: overrides.json
notebooks/: 01_init_notebook.ipynb  template.ipynb  template_scratch.ipynb  template_textbook.ipynb
scripts/: init_template.py
