[project]
name = "base-notebook"
version = "0.1.0"

dependencies = [
    # jupyter / notebook
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    # science / math
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "nbqa",
    "nbstripout",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
